--- a/modules/_motor_.html
+++ b/modules/_motor_.html
@@ -75,6 +75,8 @@
 							<h3>Classes</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_motor_.dcmotor.html" class="tsd-kind-icon">DCMotor</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_motor_.largemotor.html" class="tsd-kind-icon">Large<wbr>Motor</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_motor_.mediummotor.html" class="tsd-kind-icon">Medium<wbr>Motor</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_motor_.motor.html" class="tsd-kind-icon">Motor</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_motor_.motorbase.html" class="tsd-kind-icon">Motor<wbr>Base</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_motor_.motorspeedsp.html" class="tsd-kind-icon">Motor<wbr>Speed<wbr>Sp</a></li>
@@ -115,6 +117,12 @@
 				<ul class="before-current">
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="../classes/_motor_.dcmotor.html" class="tsd-kind-icon">DCMotor</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../classes/_motor_.largemotor.html" class="tsd-kind-icon">Large<wbr>Motor</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../classes/_motor_.mediummotor.html" class="tsd-kind-icon">Medium<wbr>Motor</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="../classes/_motor_.motor.html" class="tsd-kind-icon">Motor</a>
