--- a/modules/_sensor_.html
+++ b/modules/_sensor_.html
@@ -76,6 +76,8 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_sensor_.i2csensor.html" class="tsd-kind-icon">I2CSensor</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_sensor_.sensor.html" class="tsd-kind-icon">Sensor</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_sensor_.sensorbase.html" class="tsd-kind-icon">Sensor<wbr>Base</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_sensor_.touchsensor.html" class="tsd-kind-icon">Touch<wbr>Sensor</a></li>
 							</ul>
 						</section>
 					</div>
@@ -115,6 +117,12 @@
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="../classes/_sensor_.sensor.html" class="tsd-kind-icon">Sensor</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../classes/_sensor_.sensorbase.html" class="tsd-kind-icon">Sensor<wbr>Base</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../classes/_sensor_.touchsensor.html" class="tsd-kind-icon">Touch<wbr>Sensor</a>
 					</li>
 				</ul>
 			</nav>
