--- a/index.html
+++ b/index.html
@@ -124,23 +124,26 @@
 					<li class="globals  ">
 						<a href="globals.html"><em>Globals</em></a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="modules/_export_.html">"export"</a>
+					<li class="label tsd-is-external">
+						<span>Internals</span>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="modules/_platform_ev3_.html">"platform-<wbr>ev3"</a>
+					</li>
+					<li class="label tsd-is-external">
+						<span>Externals</span>
+					</li>
+					<li class=" tsd-kind-external-module tsd-is-external">
 						<a href="modules/_extras_.html">"extras"</a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="modules/_include_.html">"include"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
+					<li class=" tsd-kind-external-module tsd-is-external">
 						<a href="modules/_io_.html">"io"</a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="modules/_motor_.html">"motor"</a>
+					<li class=" tsd-kind-external-module tsd-is-external">
+						<a href="modules/_motors_.html">"motors"</a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="modules/_sensor_.html">"sensor"</a>
+					<li class=" tsd-kind-external-module tsd-is-external">
+						<a href="modules/_sensors_.html">"sensors"</a>
 					</li>
 				</ul>
 			</nav>
