--- a/modules/_io_.html
+++ b/modules/_io_.html
@@ -71,12 +71,12 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section tsd-is-not-exported">
+						<section class="tsd-index-section tsd-is-external">
 							<h3>Classes</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_io_.device.html" class="tsd-kind-icon">Device</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_io_.traceerror.html" class="tsd-kind-icon">Trace<wbr>Error</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_io_.xerror.html" class="tsd-kind-icon">XError</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_io_.device.html" class="tsd-kind-icon">Device</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_io_.traceerror.html" class="tsd-kind-icon">Trace<wbr>Error</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external tsd-is-not-exported"><a href="../classes/_io_.xerror.html" class="tsd-kind-icon">XError</a></li>
 							</ul>
 						</section>
 					</div>
@@ -89,35 +89,38 @@
 					<li class="globals  ">
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="_export_.html">"export"</a>
+					<li class="label tsd-is-external">
+						<span>Internals</span>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="_platform_ev3_.html">"platform-<wbr>ev3"</a>
+					</li>
+					<li class="label tsd-is-external">
+						<span>Externals</span>
+					</li>
+					<li class=" tsd-kind-external-module tsd-is-external">
 						<a href="_extras_.html">"extras"</a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="_include_.html">"include"</a>
-					</li>
-					<li class="current tsd-kind-external-module">
+					<li class="current tsd-kind-external-module tsd-is-external">
 						<a href="_io_.html">"io"</a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="_motor_.html">"motor"</a>
+					<li class=" tsd-kind-external-module tsd-is-external">
+						<a href="_motors_.html">"motors"</a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="_sensor_.html">"sensor"</a>
+					<li class=" tsd-kind-external-module tsd-is-external">
+						<a href="_sensors_.html">"sensors"</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
 						<a href="../classes/_io_.device.html" class="tsd-kind-icon">Device</a>
 					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
 						<a href="../classes/_io_.traceerror.html" class="tsd-kind-icon">Trace<wbr>Error</a>
 					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external tsd-is-not-exported">
 						<a href="../classes/_io_.xerror.html" class="tsd-kind-icon">XError</a>
 					</li>
 				</ul>
