--- a/classes/_motors_.motorspeedsp.html
+++ b/classes/_motors_.motorspeedsp.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>TraceError | ev3dev-lang for Node.JS</title>
+	<title>MotorSpeedSp | ev3dev-lang for Node.JS</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -57,13 +57,13 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/_io_.html">&quot;io&quot;</a>
+					<a href="../modules/_motors_.html">&quot;motors&quot;</a>
 				</li>
 				<li>
-					<a href="_io_.traceerror.html">TraceError</a>
+					<a href="_motors_.motorspeedsp.html">MotorSpeedSp</a>
 				</li>
 			</ul>
-			<h1>Class TraceError</h1>
+			<h1>Class MotorSpeedSp</h1>
 		</div>
 	</div>
 </header>
@@ -74,7 +74,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">TraceError</span>
+						<span class="target">MotorSpeedSp</span>
 					</li>
 				</ul>
 			</section>
@@ -85,20 +85,22 @@
 						<section class="tsd-index-section tsd-is-external">
 							<h3>Constructors</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-constructor tsd-parent-kind-class tsd-is-external"><a href="_io_.traceerror.html#constructor" class="tsd-kind-icon">constructor</a></li>
+								<li class="tsd-kind-constructor tsd-parent-kind-class tsd-is-external"><a href="_motors_.motorspeedsp.html#constructor" class="tsd-kind-icon">constructor</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section tsd-is-external">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-external"><a href="_io_.traceerror.html#innererror" class="tsd-kind-icon">inner<wbr>Error</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-external"><a href="_io_.traceerror.html#message" class="tsd-kind-icon">message</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-external"><a href="_motors_.motorspeedsp.html#dutycyclesp" class="tsd-kind-icon">duty<wbr>Cycle<wbr>Sp</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-external"><a href="_motors_.motorspeedsp.html#regulationenabled" class="tsd-kind-icon">regulation<wbr>Enabled</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-external"><a href="_motors_.motorspeedsp.html#speedsp" class="tsd-kind-icon">speed<wbr>Sp</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section tsd-is-external">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-external"><a href="_io_.traceerror.html#tostring" class="tsd-kind-icon">to<wbr>String</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static tsd-is-external"><a href="_motors_.motorspeedsp.html#fromregulated" class="tsd-kind-icon">from<wbr>Regulated</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static tsd-is-external"><a href="_motors_.motorspeedsp.html#fromunregulated" class="tsd-kind-icon">from<wbr>Unregulated</a></li>
 							</ul>
 						</section>
 					</div>
@@ -110,25 +112,22 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class tsd-is-external">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Trace<wbr>Error<span class="tsd-signature-symbol">(</span>message<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span>, innerError<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_io_.traceerror.html" class="tsd-signature-type">TraceError</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Motor<wbr>Speed<wbr>Sp<span class="tsd-signature-symbol">(</span>dutyCycleSp<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_motors_.motorspeedsp.html" class="tsd-signature-type">MotorSpeedSp</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/io.ts#L19">io.ts:19</a></li>
+									<li>Defined in motors.ts:881</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5><span class="tsd-flag ts-flagOptional">Optional</span> message: <span class="tsd-signature-type">string</span></h5>
-								</li>
-								<li>
-									<h5><span class="tsd-flag ts-flagOptional">Optional</span> innerError: <span class="tsd-signature-type">any</span></h5>
+									<h5><span class="tsd-flag ts-flagOptional">Optional</span> dutyCycleSp: <span class="tsd-signature-type">number</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="_io_.traceerror.html" class="tsd-signature-type">TraceError</a></h4>
+							<h4 class="tsd-returns-title">Returns <a href="_motors_.motorspeedsp.html" class="tsd-signature-type">MotorSpeedSp</a></h4>
 						</li>
 					</ul>
 				</section>
@@ -136,42 +135,81 @@
 			<section class="tsd-panel-group tsd-member-group tsd-is-external">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-external">
-					<a name="innererror" class="tsd-anchor"></a>
-					<h3>inner<wbr>Error</h3>
-					<div class="tsd-signature tsd-kind-icon">inner<wbr>Error<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
+					<a name="dutycyclesp" class="tsd-anchor"></a>
+					<h3>duty<wbr>Cycle<wbr>Sp</h3>
+					<div class="tsd-signature tsd-kind-icon">duty<wbr>Cycle<wbr>Sp<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/io.ts#L18">io.ts:18</a></li>
+							<li>Defined in motors.ts:880</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-external">
-					<a name="message" class="tsd-anchor"></a>
-					<h3>message</h3>
-					<div class="tsd-signature tsd-kind-icon">message<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<a name="regulationenabled" class="tsd-anchor"></a>
+					<h3>regulation<wbr>Enabled</h3>
+					<div class="tsd-signature tsd-kind-icon">regulation<wbr>Enabled<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/io.ts#L19">io.ts:19</a></li>
+							<li>Defined in motors.ts:879</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-external">
+					<a name="speedsp" class="tsd-anchor"></a>
+					<h3>speed<wbr>Sp</h3>
+					<div class="tsd-signature tsd-kind-icon">speed<wbr>Sp<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in motors.ts:881</li>
 						</ul>
 					</aside>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group tsd-is-external">
 				<h2>Methods</h2>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-external">
-					<a name="tostring" class="tsd-anchor"></a>
-					<h3>to<wbr>String</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-external">
-						<li class="tsd-signature tsd-kind-icon">to<wbr>String<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-static tsd-is-external">
+					<a name="fromregulated" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagStatic">Static</span> from<wbr>Regulated</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-static tsd-is-external">
+						<li class="tsd-signature tsd-kind-icon">from<wbr>Regulated<span class="tsd-signature-symbol">(</span>speedSp<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_motors_.motorspeedsp.html" class="tsd-signature-type">MotorSpeedSp</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/io.ts#L26">io.ts:26</a></li>
+									<li>Defined in motors.ts:890</li>
 								</ul>
 							</aside>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>speedSp: <span class="tsd-signature-type">number</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <a href="_motors_.motorspeedsp.html" class="tsd-signature-type">MotorSpeedSp</a></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-static tsd-is-external">
+					<a name="fromunregulated" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagStatic">Static</span> from<wbr>Unregulated</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-static tsd-is-external">
+						<li class="tsd-signature tsd-kind-icon">from<wbr>Unregulated<span class="tsd-signature-symbol">(</span>dutyCycleSp<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_motors_.motorspeedsp.html" class="tsd-signature-type">MotorSpeedSp</a></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in motors.ts:898</li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>dutyCycleSp: <span class="tsd-signature-type">number</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <a href="_motors_.motorspeedsp.html" class="tsd-signature-type">MotorSpeedSp</a></h4>
 						</li>
 					</ul>
 				</section>
@@ -195,10 +233,10 @@
 					<li class=" tsd-kind-external-module tsd-is-external">
 						<a href="../modules/_extras_.html">"extras"</a>
 					</li>
-					<li class="current tsd-kind-external-module tsd-is-external">
+					<li class=" tsd-kind-external-module tsd-is-external">
 						<a href="../modules/_io_.html">"io"</a>
 					</li>
-					<li class=" tsd-kind-external-module tsd-is-external">
+					<li class="current tsd-kind-external-module tsd-is-external">
 						<a href="../modules/_motors_.html">"motors"</a>
 					</li>
 					<li class=" tsd-kind-external-module tsd-is-external">
@@ -209,31 +247,49 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="_io_.device.html" class="tsd-kind-icon">Device</a>
+						<a href="_motors_.dcmotor.html" class="tsd-kind-icon">DCMotor</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
+						<a href="_motors_.largemotor.html" class="tsd-kind-icon">Large<wbr>Motor</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
+						<a href="_motors_.mediummotor.html" class="tsd-kind-icon">Medium<wbr>Motor</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
+						<a href="_motors_.motor.html" class="tsd-kind-icon">Motor</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
+						<a href="_motors_.motorbase.html" class="tsd-kind-icon">Motor<wbr>Base</a>
 					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="_io_.traceerror.html" class="tsd-kind-icon">Trace<wbr>Error</a>
+						<a href="_motors_.motorspeedsp.html" class="tsd-kind-icon">Motor<wbr>Speed<wbr>Sp</a>
 						<ul>
 							<li class=" tsd-kind-constructor tsd-parent-kind-class tsd-is-external">
-								<a href="_io_.traceerror.html#constructor" class="tsd-kind-icon">constructor</a>
+								<a href="_motors_.motorspeedsp.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-external">
-								<a href="_io_.traceerror.html#innererror" class="tsd-kind-icon">inner<wbr>Error</a>
+								<a href="_motors_.motorspeedsp.html#dutycyclesp" class="tsd-kind-icon">duty<wbr>Cycle<wbr>Sp</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-external">
-								<a href="_io_.traceerror.html#message" class="tsd-kind-icon">message</a>
+								<a href="_motors_.motorspeedsp.html#regulationenabled" class="tsd-kind-icon">regulation<wbr>Enabled</a>
 							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-external">
-								<a href="_io_.traceerror.html#tostring" class="tsd-kind-icon">to<wbr>String</a>
+							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-external">
+								<a href="_motors_.motorspeedsp.html#speedsp" class="tsd-kind-icon">speed<wbr>Sp</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-static tsd-is-external">
+								<a href="_motors_.motorspeedsp.html#fromregulated" class="tsd-kind-icon">from<wbr>Regulated</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-static tsd-is-external">
+								<a href="_motors_.motorspeedsp.html#fromunregulated" class="tsd-kind-icon">from<wbr>Unregulated</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external tsd-is-not-exported">
-						<a href="_io_.xerror.html" class="tsd-kind-icon">XError</a>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
+						<a href="_motors_.servomotor.html" class="tsd-kind-icon">Servo<wbr>Motor</a>
 					</li>
 				</ul>
 			</nav>
