--- a/globals.html
+++ b/globals.html
@@ -71,12 +71,11 @@
 						<section class="tsd-index-section ">
 							<h3>External modules</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-external-module"><a href="modules/_export_.html" class="tsd-kind-icon">"export"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_extras_.html" class="tsd-kind-icon">"extras"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_include_.html" class="tsd-kind-icon">"include"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_io_.html" class="tsd-kind-icon">"io"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_motor_.html" class="tsd-kind-icon">"motor"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_sensor_.html" class="tsd-kind-icon">"sensor"</a></li>
+								<li class="tsd-kind-external-module tsd-is-external"><a href="modules/_extras_.html" class="tsd-kind-icon">"extras"</a></li>
+								<li class="tsd-kind-external-module tsd-is-external"><a href="modules/_io_.html" class="tsd-kind-icon">"io"</a></li>
+								<li class="tsd-kind-external-module tsd-is-external"><a href="modules/_motors_.html" class="tsd-kind-icon">"motors"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_platform_ev3_.html" class="tsd-kind-icon">"platform-<wbr>ev3"</a></li>
+								<li class="tsd-kind-external-module tsd-is-external"><a href="modules/_sensors_.html" class="tsd-kind-icon">"sensors"</a></li>
 							</ul>
 						</section>
 					</div>
@@ -89,23 +88,26 @@
 					<li class="globals current ">
 						<a href="globals.html"><em>Globals</em></a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="modules/_export_.html">"export"</a>
+					<li class="label tsd-is-external">
+						<span>Internals</span>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="modules/_platform_ev3_.html">"platform-<wbr>ev3"</a>
+					</li>
+					<li class="label tsd-is-external">
+						<span>Externals</span>
+					</li>
+					<li class=" tsd-kind-external-module tsd-is-external">
 						<a href="modules/_extras_.html">"extras"</a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="modules/_include_.html">"include"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
+					<li class=" tsd-kind-external-module tsd-is-external">
 						<a href="modules/_io_.html">"io"</a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="modules/_motor_.html">"motor"</a>
+					<li class=" tsd-kind-external-module tsd-is-external">
+						<a href="modules/_motors_.html">"motors"</a>
 					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="modules/_sensor_.html">"sensor"</a>
+					<li class=" tsd-kind-external-module tsd-is-external">
+						<a href="modules/_sensors_.html">"sensors"</a>
 					</li>
 				</ul>
 			</nav>
