--- a/modules/_sensors_.html
+++ b/modules/_sensors_.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;extras&quot; | ev3dev-lang for Node.JS</title>
+	<title>&quot;sensors&quot; | ev3dev-lang for Node.JS</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -57,10 +57,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="_extras_.html">&quot;extras&quot;</a>
+					<a href="_sensors_.html">&quot;sensors&quot;</a>
 				</li>
 			</ul>
-			<h1>External module &quot;extras&quot;</h1>
+			<h1>External module &quot;sensors&quot;</h1>
 		</div>
 	</div>
 </header>
@@ -74,9 +74,10 @@
 						<section class="tsd-index-section tsd-is-external">
 							<h3>Classes</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_extras_.led.html" class="tsd-kind-icon">LED</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_extras_.legoport.html" class="tsd-kind-icon">Lego<wbr>Port</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_extras_.powersupply.html" class="tsd-kind-icon">Power<wbr>Supply</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.i2csensor.html" class="tsd-kind-icon">I2CSensor</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.sensor.html" class="tsd-kind-icon">Sensor</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.sensorbase.html" class="tsd-kind-icon">Sensor<wbr>Base</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-external"><a href="../classes/_sensors_.touchsensor.html" class="tsd-kind-icon">Touch<wbr>Sensor</a></li>
 							</ul>
 						</section>
 					</div>
@@ -98,7 +99,7 @@
 					<li class="label tsd-is-external">
 						<span>Externals</span>
 					</li>
-					<li class="current tsd-kind-external-module tsd-is-external">
+					<li class=" tsd-kind-external-module tsd-is-external">
 						<a href="_extras_.html">"extras"</a>
 					</li>
 					<li class=" tsd-kind-external-module tsd-is-external">
@@ -107,7 +108,7 @@
 					<li class=" tsd-kind-external-module tsd-is-external">
 						<a href="_motors_.html">"motors"</a>
 					</li>
-					<li class=" tsd-kind-external-module tsd-is-external">
+					<li class="current tsd-kind-external-module tsd-is-external">
 						<a href="_sensors_.html">"sensors"</a>
 					</li>
 				</ul>
@@ -115,13 +116,16 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="../classes/_extras_.led.html" class="tsd-kind-icon">LED</a>
+						<a href="../classes/_sensors_.i2csensor.html" class="tsd-kind-icon">I2CSensor</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="../classes/_extras_.legoport.html" class="tsd-kind-icon">Lego<wbr>Port</a>
+						<a href="../classes/_sensors_.sensor.html" class="tsd-kind-icon">Sensor</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
-						<a href="../classes/_extras_.powersupply.html" class="tsd-kind-icon">Power<wbr>Supply</a>
+						<a href="../classes/_sensors_.sensorbase.html" class="tsd-kind-icon">Sensor<wbr>Base</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
+						<a href="../classes/_sensors_.touchsensor.html" class="tsd-kind-icon">Touch<wbr>Sensor</a>
 					</li>
 				</ul>
 			</nav>
